Apply miscellaneous fixes