@@ -34,7 +34,6 @@ import org.jlab.clara.base.error.ClaraException;
 import org.jlab.clara.std.orchestrators.CallbackInfo.RingCallbackInfo;
 import org.jlab.clara.std.orchestrators.CallbackInfo.RingListener;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Queue;
 import java.util.concurrent.ConcurrentLinkedQueue;
@@ -291,14 +290,14 @@ public class MonitorOrchestrator implements AutoCloseable {
 
         private final OptionSpec<String> arguments;
 
-        private OptionParser parser;
+        private final OptionParser parser;
         private OptionSet options;
 
         CommandLineBuilder() {
             parser = new OptionParser();
             arguments = parser.nonOptions();
 
-            parser.acceptsAll(Arrays.asList("h", "help")).forHelp();
+            parser.acceptsAll(List.of("h", "help")).forHelp();
         }
 
         public void parse(String[] args) {
